javascript/ql/test/library-tests/TypeScript/TypeErrors/TypeErrors.ql
import javascript

from TypeScriptTypeError error
select error, error.getErrorCode(), error.getMessage()
